# poi

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go  poi.go  type.go  util.go
src/: cache.rs  config.rs  lib.rs  main.rs  skim.rs  utils.rs  walkdir.rs
src/utils/: mod.rs  path_util.rs
