[package]
name = "poi"
version = "2.0.0"
authors = ["yasukotelin"]
edition = "2018"
licence="MIT"
description="poi is a quick access tool to project directories."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
dirs = "3.0.1"
yaml-rust = "0.4"
walkdir = "2"
skim = "0.8.1"